Compiler/eRRoRParser.cpp

// Generated from eRRoR.g4 by ANTLR 4.13.1


#include "eRRoRListener.h"
#include "eRRoRVisitor.h"

#include "eRRoRParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ERRoRParserStaticData final {
  ERRoRParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ERRoRParserStaticData(const ERRoRParserStaticData&) = delete;
  ERRoRParserStaticData(ERRoRParserStaticData&&) = delete;
  ERRoRParserStaticData& operator=(const ERRoRParserStaticData&) = delete;
  ERRoRParserStaticData& operator=(ERRoRParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag errorParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
ERRoRParserStaticData *errorParserStaticData = nullptr;

void errorParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (errorParserStaticData != nullptr) {
    return;
  }
#else
  assert(errorParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ERRoRParserStaticData>(
    std::vector<std::string>{
      "program", "stmt", "outstmt", "instmt", "logic", "whilestmt", "ifstmt", 
      "assignmentstmt", "comparestmt", "logicstmt", "convertstmt", "unionstmt", 
      "additionstmt", "multiplicationstmt", "value"
    },
    std::vector<std::string>{
      "", "", "'!'", "'\\u003F'", "':'", "';'", "'.'", "','", "'error'", 
      "'eRror'", "'erRor'", "'erroR'", "'eRRor'", "'erRoR'", "'eRroR'", 
      "'eRRoR'", "'Error'", "'ERror'", "'ErRor'", "'ErroR'", "'ERRor'", 
      "'ErRoR'", "'ERroR'", "'ERRoR'"
    },
    std::vector<std::string>{
      "", "WHITESPACE", "OUTPUT", "INPUT", "WHILE", "IF", "TERMINATE", "ENDLOOP", 
      "ASSIGNMENT", "LESSTHAN", "OR", "NOT", "AND", "CONVERTER", "UNION", 
      "EQUIVALENCE", "BEGIN", "GREATERTHAN", "ONE", "SUBTRACTION", "ADDITION", 
      "DIVISION", "MULTIPLICATION", "ZERO", "VARIABLE"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  errorParserStaticData = staticData.release();
}

}

eRRoRParser::eRRoRParser(TokenStream *input) : eRRoRParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

eRRoRParser::eRRoRParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  eRRoRParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *errorParserStaticData->atn, errorParserStaticData->decisionToDFA, errorParserStaticData->sharedContextCache, options);
}

eRRoRParser::~eRRoRParser() {
  delete _interpreter;
}

const atn::ATN& eRRoRParser::getATN() const {
  return *errorParserStaticData->atn;
}

std::string eRRoRParser::getGrammarFileName() const {
  return "eRRoR.g4";
}

const std::vector<std::string>& eRRoRParser::getRuleNames() const {
  return errorParserStaticData->ruleNames;
}

const dfa::Vocabulary& eRRoRParser::getVocabulary() const {
  return errorParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView eRRoRParser::getSerializedATN() const {
  return errorParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

eRRoRParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* eRRoRParser::ProgramContext::BEGIN() {
  return getToken(eRRoRParser::BEGIN, 0);
}

tree::TerminalNode* eRRoRParser::ProgramContext::TERMINATE() {
  return getToken(eRRoRParser::TERMINATE, 0);
}

std::vector<eRRoRParser::StmtContext *> eRRoRParser::ProgramContext::stmt() {
  return getRuleContexts<eRRoRParser::StmtContext>();
}

eRRoRParser::StmtContext* eRRoRParser::ProgramContext::stmt(size_t i) {
  return getRuleContext<eRRoRParser::StmtContext>(i);
}


size_t eRRoRParser::ProgramContext::getRuleIndex() const {
  return eRRoRParser::RuleProgram;
}

void eRRoRParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void eRRoRParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any eRRoRParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<eRRoRVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

eRRoRParser::ProgramContext* eRRoRParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, eRRoRParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    match(eRRoRParser::BEGIN);
    setState(32); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(31);
      stmt();
      setState(34); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 25435172) != 0));
    setState(36);
    match(eRRoRParser::TERMINATE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

eRRoRParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

eRRoRParser::OutstmtContext* eRRoRParser::StmtContext::outstmt() {
  return getRuleContext<eRRoRParser::OutstmtContext>(0);
}

eRRoRParser::InstmtContext* eRRoRParser::StmtContext::instmt() {
  return getRuleContext<eRRoRParser::InstmtContext>(0);
}

eRRoRParser::WhilestmtContext* eRRoRParser::StmtContext::whilestmt() {
  return getRuleContext<eRRoRParser::WhilestmtContext>(0);
}

eRRoRParser::IfstmtContext* eRRoRParser::StmtContext::ifstmt() {
  return getRuleContext<eRRoRParser::IfstmtContext>(0);
}

eRRoRParser::AssignmentstmtContext* eRRoRParser::StmtContext::assignmentstmt() {
  return getRuleContext<eRRoRParser::AssignmentstmtContext>(0);
}

eRRoRParser::ComparestmtContext* eRRoRParser::StmtContext::comparestmt() {
  return getRuleContext<eRRoRParser::ComparestmtContext>(0);
}

eRRoRParser::LogicstmtContext* eRRoRParser::StmtContext::logicstmt() {
  return getRuleContext<eRRoRParser::LogicstmtContext>(0);
}


size_t eRRoRParser::StmtContext::getRuleIndex() const {
  return eRRoRParser::RuleStmt;
}

void eRRoRParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void eRRoRParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}


std::any eRRoRParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<eRRoRVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

eRRoRParser::StmtContext* eRRoRParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 2, eRRoRParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(45);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(38);
      outstmt();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(39);
      instmt();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(40);
      whilestmt();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(41);
      ifstmt();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(42);
      assignmentstmt();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(43);
      comparestmt();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(44);
      logicstmt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OutstmtContext ------------------------------------------------------------------

eRRoRParser::OutstmtContext::OutstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* eRRoRParser::OutstmtContext::OUTPUT() {
  return getToken(eRRoRParser::OUTPUT, 0);
}

eRRoRParser::ValueContext* eRRoRParser::OutstmtContext::value() {
  return getRuleContext<eRRoRParser::ValueContext>(0);
}

eRRoRParser::ConvertstmtContext* eRRoRParser::OutstmtContext::convertstmt() {
  return getRuleContext<eRRoRParser::ConvertstmtContext>(0);
}


size_t eRRoRParser::OutstmtContext::getRuleIndex() const {
  return eRRoRParser::RuleOutstmt;
}

void eRRoRParser::OutstmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOutstmt(this);
}

void eRRoRParser::OutstmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOutstmt(this);
}


std::any eRRoRParser::OutstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<eRRoRVisitor*>(visitor))
    return parserVisitor->visitOutstmt(this);
  else
    return visitor->visitChildren(this);
}

eRRoRParser::OutstmtContext* eRRoRParser::outstmt() {
  OutstmtContext *_localctx = _tracker.createInstance<OutstmtContext>(_ctx, getState());
  enterRule(_localctx, 4, eRRoRParser::RuleOutstmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    match(eRRoRParser::OUTPUT);
    setState(50);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case eRRoRParser::ONE:
      case eRRoRParser::ZERO:
      case eRRoRParser::VARIABLE: {
        setState(48);
        value();
        break;
      }

      case eRRoRParser::CONVERTER: {
        setState(49);
        convertstmt();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstmtContext ------------------------------------------------------------------

eRRoRParser::InstmtContext::InstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* eRRoRParser::InstmtContext::VARIABLE() {
  return getToken(eRRoRParser::VARIABLE, 0);
}

tree::TerminalNode* eRRoRParser::InstmtContext::INPUT() {
  return getToken(eRRoRParser::INPUT, 0);
}


size_t eRRoRParser::InstmtContext::getRuleIndex() const {
  return eRRoRParser::RuleInstmt;
}

void eRRoRParser::InstmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInstmt(this);
}

void eRRoRParser::InstmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInstmt(this);
}


std::any eRRoRParser::InstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<eRRoRVisitor*>(visitor))
    return parserVisitor->visitInstmt(this);
  else
    return visitor->visitChildren(this);
}

eRRoRParser::InstmtContext* eRRoRParser::instmt() {
  InstmtContext *_localctx = _tracker.createInstance<InstmtContext>(_ctx, getState());
  enterRule(_localctx, 6, eRRoRParser::RuleInstmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(eRRoRParser::VARIABLE);
    setState(53);
    match(eRRoRParser::INPUT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicContext ------------------------------------------------------------------

eRRoRParser::LogicContext::LogicContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

eRRoRParser::LogicstmtContext* eRRoRParser::LogicContext::logicstmt() {
  return getRuleContext<eRRoRParser::LogicstmtContext>(0);
}

eRRoRParser::ComparestmtContext* eRRoRParser::LogicContext::comparestmt() {
  return getRuleContext<eRRoRParser::ComparestmtContext>(0);
}

tree::TerminalNode* eRRoRParser::LogicContext::NOT() {
  return getToken(eRRoRParser::NOT, 0);
}

tree::TerminalNode* eRRoRParser::LogicContext::AND() {
  return getToken(eRRoRParser::AND, 0);
}

tree::TerminalNode* eRRoRParser::LogicContext::OR() {
  return getToken(eRRoRParser::OR, 0);
}


size_t eRRoRParser::LogicContext::getRuleIndex() const {
  return eRRoRParser::RuleLogic;
}

void eRRoRParser::LogicContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogic(this);
}

void eRRoRParser::LogicContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogic(this);
}


std::any eRRoRParser::LogicContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<eRRoRVisitor*>(visitor))
    return parserVisitor->visitLogic(this);
  else
    return visitor->visitChildren(this);
}

eRRoRParser::LogicContext* eRRoRParser::logic() {
  LogicContext *_localctx = _tracker.createInstance<LogicContext>(_ctx, getState());
  enterRule(_localctx, 8, eRRoRParser::RuleLogic);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(63);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(55);
      logicstmt();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(56);
      comparestmt();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(57);
      match(eRRoRParser::NOT);
      setState(58);
      logicstmt();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(59);
      match(eRRoRParser::NOT);
      setState(60);
      comparestmt();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(61);
      match(eRRoRParser::AND);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(62);
      match(eRRoRParser::OR);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhilestmtContext ------------------------------------------------------------------

eRRoRParser::WhilestmtContext::WhilestmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* eRRoRParser::WhilestmtContext::WHILE() {
  return getToken(eRRoRParser::WHILE, 0);
}

tree::TerminalNode* eRRoRParser::WhilestmtContext::ENDLOOP() {
  return getToken(eRRoRParser::ENDLOOP, 0);
}

std::vector<eRRoRParser::LogicContext *> eRRoRParser::WhilestmtContext::logic() {
  return getRuleContexts<eRRoRParser::LogicContext>();
}

eRRoRParser::LogicContext* eRRoRParser::WhilestmtContext::logic(size_t i) {
  return getRuleContext<eRRoRParser::LogicContext>(i);
}

std::vector<eRRoRParser::StmtContext *> eRRoRParser::WhilestmtContext::stmt() {
  return getRuleContexts<eRRoRParser::StmtContext>();
}

eRRoRParser::StmtContext* eRRoRParser::WhilestmtContext::stmt(size_t i) {
  return getRuleContext<eRRoRParser::StmtContext>(i);
}


size_t eRRoRParser::WhilestmtContext::getRuleIndex() const {
  return eRRoRParser::RuleWhilestmt;
}

void eRRoRParser::WhilestmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhilestmt(this);
}

void eRRoRParser::WhilestmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhilestmt(this);
}


std::any eRRoRParser::WhilestmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<eRRoRVisitor*>(visitor))
    return parserVisitor->visitWhilestmt(this);
  else
    return visitor->visitChildren(this);
}

eRRoRParser::WhilestmtContext* eRRoRParser::whilestmt() {
  WhilestmtContext *_localctx = _tracker.createInstance<WhilestmtContext>(_ctx, getState());
  enterRule(_localctx, 10, eRRoRParser::RuleWhilestmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(65);
      logic();
      setState(68); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 25435136) != 0));
    setState(70);
    match(eRRoRParser::WHILE);
    setState(72); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(71);
      stmt();
      setState(74); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 25435172) != 0));
    setState(76);
    match(eRRoRParser::ENDLOOP);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfstmtContext ------------------------------------------------------------------

eRRoRParser::IfstmtContext::IfstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* eRRoRParser::IfstmtContext::IF() {
  return getToken(eRRoRParser::IF, 0);
}

tree::TerminalNode* eRRoRParser::IfstmtContext::ENDLOOP() {
  return getToken(eRRoRParser::ENDLOOP, 0);
}

std::vector<eRRoRParser::LogicContext *> eRRoRParser::IfstmtContext::logic() {
  return getRuleContexts<eRRoRParser::LogicContext>();
}

eRRoRParser::LogicContext* eRRoRParser::IfstmtContext::logic(size_t i) {
  return getRuleContext<eRRoRParser::LogicContext>(i);
}

std::vector<eRRoRParser::StmtContext *> eRRoRParser::IfstmtContext::stmt() {
  return getRuleContexts<eRRoRParser::StmtContext>();
}

eRRoRParser::StmtContext* eRRoRParser::IfstmtContext::stmt(size_t i) {
  return getRuleContext<eRRoRParser::StmtContext>(i);
}


size_t eRRoRParser::IfstmtContext::getRuleIndex() const {
  return eRRoRParser::RuleIfstmt;
}

void eRRoRParser::IfstmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfstmt(this);
}

void eRRoRParser::IfstmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfstmt(this);
}


std::any eRRoRParser::IfstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<eRRoRVisitor*>(visitor))
    return parserVisitor->visitIfstmt(this);
  else
    return visitor->visitChildren(this);
}

eRRoRParser::IfstmtContext* eRRoRParser::ifstmt() {
  IfstmtContext *_localctx = _tracker.createInstance<IfstmtContext>(_ctx, getState());
  enterRule(_localctx, 12, eRRoRParser::RuleIfstmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(eRRoRParser::IF);
    setState(80); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(79);
              logic();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(82); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
    setState(85); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(84);
      stmt();
      setState(87); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 25435172) != 0));
    setState(89);
    match(eRRoRParser::ENDLOOP);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentstmtContext ------------------------------------------------------------------

eRRoRParser::AssignmentstmtContext::AssignmentstmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* eRRoRParser::AssignmentstmtContext::VARIABLE() {
  return getToken(eRRoRParser::VARIABLE, 0);
}

tree::TerminalNode* eRRoRParser::AssignmentstmtContext::ASSIGNMENT() {
  return getToken(eRRoRParser::ASSIGNMENT, 0);
}

eRRoRParser::ValueContext* eRRoRParser::AssignmentstmtContext::value() {
  return getRuleContext<eRRoRParser::ValueContext>(0);
}

eRRoRParser::UnionstmtContext* eRRoRParser::AssignmentstmtContext::unionstmt() {
  return getRuleContext<eRRoRParser::UnionstmtContext>(0);
}

eRRoRParser::AdditionstmtContext* eRRoRParser::AssignmentstmtContext::additionstmt() {
  return getRuleContext<eRRoRParser::AdditionstmtContext>(0);
}

eRRoRParser::MultiplicationstmtContext* eRRoRParser::AssignmentstmtContext::multiplicationstmt() {
  return getRuleContext<eRRoRParser::MultiplicationstmtContext>(0);
}

eRRoRParser::ConvertstmtContext* eRRoRParser::AssignmentstmtContext::convertstmt() {
  return getRuleContext<eRRoRParser::ConvertstmtContext>(0);
}


size_t eRRoRParser::AssignmentstmtContext::getRuleIndex() const {
  return eRRoRParser::RuleAssignmentstmt;
}

void eRRoRParser::AssignmentstmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignmentstmt(this);
}

void eRRoRParser::AssignmentstmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignmentstmt(this);
}


std::any eRRoRParser::AssignmentstmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<eRRoRVisitor*>(visitor))
    return parserVisitor->visitAssignmentstmt(this);
  else
    return visitor->visitChildren(this);
}

eRRoRParser::AssignmentstmtContext* eRRoRParser::assignmentstmt() {
  AssignmentstmtContext *_localctx = _tracker.createInstance<AssignmentstmtContext>(_ctx, getState());
  enterRule(_localctx, 14, eRRoRParser::RuleAssignmentstmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(eRRoRParser::VARIABLE);
    setState(92);
    match(eRRoRParser::ASSIGNMENT);
    setState(98);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      setState(93);
      value();
      break;
    }

    case 2: {
      setState(94);
      unionstmt();
      break;
    }

    case 3: {
      setState(95);
      additionstmt();
      break;
    }

    case 4: {
      setState(96);
      multiplicationstmt();
      break;
    }

    case 5: {
      setState(97);
      convertstmt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ComparestmtContext ------------------------------------------------------------------

eRRoRParser::ComparestmtContext::ComparestmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<eRRoRParser::ValueContext *> eRRoRParser::ComparestmtContext::value() {
  return getRuleContexts<eRRoRParser::ValueContext>();
}

eRRoRParser::ValueContext* eRRoRParser::ComparestmtContext::value(size_t i) {
  return getRuleContext<eRRoRParser::ValueContext>(i);
}

tree::TerminalNode* eRRoRParser::ComparestmtContext::LESSTHAN() {
  return getToken(eRRoRParser::LESSTHAN, 0);
}

tree::TerminalNode* eRRoRParser::ComparestmtContext::GREATERTHAN() {
  return getToken(eRRoRParser::GREATERTHAN, 0);
}

tree::TerminalNode* eRRoRParser::ComparestmtContext::EQUIVALENCE() {
  return getToken(eRRoRParser::EQUIVALENCE, 0);
}


size_t eRRoRParser::ComparestmtContext::getRuleIndex() const {
  return eRRoRParser::RuleComparestmt;
}

void eRRoRParser::ComparestmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComparestmt(this);
}

void eRRoRParser::ComparestmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<eRRoRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComparestmt(this);
}


std::any eRRoRParser::ComparestmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<eRRoRVisitor*>(visitor))
    return parserVisitor->visitComparestmt(this);
  else
    return visitor->visitChildren(this);
}

eRRoRParser::ComparestmtContext* eRRoRParser::comparestmt() {
  ComparestmtContext *_localctx = _tracker.createInstance<ComparestmtContext>(_ctx, getState());
  enterRule(_localctx, 16, eRRoRParser::RuleComparestmt);
  size_t _la = 0;
